; ModuleID = '/home/carl/AnghaBench/rofi/source/extr_xrmoptions.c_print_option.c'
source_filename = "/home/carl/AnghaBench/rofi/source/extr_xrmoptions.c_print_option.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_8__*, i32)* @print_option to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @print_option(%struct.TYPE_8__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_8__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  switch i32 %7, label %28 [
    i32 128, label %8
    i32 130, label %12
    i32 129, label %16
    i32 132, label %20
    i32 131, label %24
  ]

8:                                                ; preds = %2
  %9 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @print_option_string(%struct.TYPE_8__* %9, i32 %10)
  br label %29

12:                                               ; preds = %2
  %13 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @print_option_number(%struct.TYPE_8__* %13, i32 %14)
  br label %29

16:                                               ; preds = %2
  %17 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @print_option_snumber(%struct.TYPE_8__* %17, i32 %18)
  br label %29

20:                                               ; preds = %2
  %21 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %22 = load i32, i32* %4, align 4
  %23 = call i32 @print_option_boolean(%struct.TYPE_8__* %21, i32 %22)
  br label %29

24:                                               ; preds = %2
  %25 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %26 = load i32, i32* %4, align 4
  %27 = call i32 @print_option_char(%struct.TYPE_8__* %25, i32 %26)
  br label %29

28:                                               ; preds = %2
  br label %29

29:                                               ; preds = %28, %24, %20, %16, %12, %8
  ret void
}

declare dso_local i32 @print_option_string(%struct.TYPE_8__*, i32) #1

declare dso_local i32 @print_option_number(%struct.TYPE_8__*, i32) #1

declare dso_local i32 @print_option_snumber(%struct.TYPE_8__*, i32) #1

declare dso_local i32 @print_option_boolean(%struct.TYPE_8__*, i32) #1

declare dso_local i32 @print_option_char(%struct.TYPE_8__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
